--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@ body{
 	padding: 20px;
 }
 
+h1{
+	text-align: center;
+}
+
 .book-library{
 	background-color: #ffffff;
 	padding: 20px;
@@ -35,17 +39,20 @@ body{
 	margin-bottom: 10px;
 }
 
-.book .author{
-	color: #777777;
-	font-size: 14px;
-	margin-bottom: 5px;
+.book h2{
+	margin: 10px 0 5px;
 }
 
-.book .price{
-	background-color: #2ecc71;
-	color: white;
+.book p{
+	color: rgb(119, 119, 119);
+	font-size: 14px;
+	margin-bottom: 10px;
+}
+
+.book div{
+	background-color: rgb(46, 204, 113);
+	color: rgb(255, 255, 255);
 	padding: 8px 0;
 	border-radius: 4px;
-	margin-top: 10px;
 	font-weight: bold;
 }
